--- a/pics/src/components/ImageList.css
+++ b/pics/src/components/ImageList.css
@@ -1,10 +1,11 @@
-
-.image-list{
-    display: grid;
-    grid-template-columns: repeat(autofill, minmax(250px, 1fr));
-    grid-auto-rows: 200px;
+.image-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 0 10px;
+  grid-auto-rows: 10px;
 }
 
-.image-list img{
-    width: 250px;
+.image-list img {
+  width: 250px;
+  grid-row-end: span 2;
 }
